@@ -1,14 +1,15 @@
-# @(#)$Ident: PO.pm 2013-12-31 01:44 pjf ;
+# @(#)$Ident: PO.pm 2014-02-01 23:39 pjf ;
 
 package File::Gettext::Storage::PO;
 
 use namespace::sweep;
-use version; our $VERSION = qv( sprintf '0.22.%d', q$Rev: 1 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.22.%d', q$Rev: 2 $ =~ /\d+/gmx );
 
 use Moo;
-use Date::Format ();
-use Encode qw( decode encode );
+use Date::Format                 ( );
+use Encode                     qw( decode encode );
 use File::DataClass::Constants;
+use File::DataClass::Functions qw( extension_map );
 use File::Gettext::Constants;
 use MooX::Augment -class;
 
@@ -28,6 +29,8 @@ augment '_write_file' => sub {
    $wtr->println( @{ $self->_write_filter( $data ) } );
    return $data;
 };
+
+extension_map '+File::Gettext::Storage::PO' => '.po';
 
 sub decompose_key {
    my ($self, $key) = @_; my $sep = CONTEXT_SEP;
@@ -421,7 +424,7 @@ File::Gettext::Storage::PO - Storage class for GNU Gettext portable object forma
 
 =head1 Version
 
-This documents version v0.22.$Rev: 1 $ of L<File::Gettext::Storage::PO>
+This documents version v0.22.$Rev: 2 $ of L<File::Gettext::Storage::PO>
 
 =head1 Synopsis
 
